--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"express-session": "^1.15.6",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"jsonwebtoken": "^8.2.1",
+		"moment": "^2.22.2",
 		"nodemon": "^1.17.5",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
