--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "nodemon ./api/server.js",
     "start": "webpack",
     "start-dev-ui": "webpack --w",
     "start-dev": "webpack-dev-server --inline --hot --progress --port 3000 ",
-    "start:all": "concurrently --kill-others \"npm start && npm run start-dev\" \"npm run start:server\""
+    "start:all": "concurrently --kill-others \"npm start && npm run start-dev\""
   },
   "author": "",
   "license": "ISC",
@@ -30,17 +29,17 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jsonwebtoken": "^8.2.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.22.2",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "password-hash": "^1.2.2",
     "qs": "^6.5.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "sqlite3": "^4.0.0",
     "webpack": "3.1.0",
     "webpack-combine-loaders": "2.0.3",
